tests/NormalTests/paczka2/big_fuzzy/84474496.err
Error in line 5: XKrz0Kvw9o A845 70,4
Error in line 6: zHFOeZSeeC3 A845 12,4
Error in line 23: S613 S576 43,31
Error in line 2: S613 S576 0,1
Error in line 27: S613 A845 44,67
Error in line 28: tLdHwkO0YF S280 2,1
Error in line 33: S613 S280 73,7
Error in line 40: XKrz0Kvw9o A845 96,9
Error in line 50: S613 S613 96,5
Error in line 54: S613 S576 84,2
Error in line 59: XKrz0Kvw9o S280 100,0
Error in line 60: tLdHwkO0YF S280 95,1
Error in line 66: tLdHwkO0YF S613 75,0
Error in line 67: tLdHwkO0YF S576 45,5
Error in line 74: XKrz0Kvw9o S280 40,4
Error in line 86: XKrz0Kvw9o S576 20,7
Error in line 87: 0bf8JG S613 85,2
Error in line 98: 0bf8JG S280 94,3
Error in line 100: zHFOeZSeeC3 S576 70,0
Error in line 94: S613 S576 28,5
Error in line 113: tLdHwkO0YF S613 78,6
Error in line 105: S613 S280 29,4
Error in line 127: 9ttC9E7mAN S576 57,3
Error in line 131: tLdHwkO0YF S5,6 90,3
Error in line 132: tLdHwkO0YF S576 447,0
Error in line 130: 0bf8JG S280 36,2
Error in line 156: 0bf8JG S576 27,2
Error in line 148: 5i0B S576 82,6
Error in line 164: 5i0B S280 21,4
Error in line 172: 5i0B S576 -1,3
Error in line 159: S613 A845 42,5
Error in line 169: 5i0B S576 71,0
Error in line 178: 5i0B S280 24,4
Error in line 179: 5i0B S613 97,0
Error in line 181: tLdHwkO0YF S280 61,6
Error in line 176: 0bf8JG S280 118,1
Error in line 201: tLdHwkO0YF S576 163,0
Error in line 204: 9ttC9E7mAN A845 99,9
Error in line 209: tLdHwkO0YF A845 55,2
Error in line 226: XKrz0Kvw9o S576 15,5
Error in line 225: 5i0B S280 439,4
Error in line 238: S613 S576 52,1
Error in line 244: zHFOeZSeeC3 S576 89,1
